version 0.6
* New s48 library: mini-profiler
* New s48 library: reinitializer
* New scsh libraries: file-mode
* New s48 libraries: SRFI-34/SRFI-35 exceptions and conditions, SRFI-10


version 0.5 2003-11-19
* New s48 libraries: procedure-tables.
* New scsh libraries: tiff.

version 0.4 2003-05-19
* New file "sunterlib.scm" contains the old "interfaces.scm" and
  "packages.scm" ("interfaces.scm" and "packages.scm" are deprecated
  and will be removed in a future release).
* New file "sunterlib-s48.scm" contains the old "s48-interfaces.scm"
  and "s48-packages.scm" ("s48-interfaces.scm" and "s48-packages.scm"
  are deprecated and will be removed in a future release).
* Added display-continuation to interaction
* New s48 library: cml

version 0.3 - 2003-4-16
* Added DETAILS (autogenerated)
* Fixed installation
* New s48 libraries: banana, intsets, binary-parse
* New scsh library: treaps, base64

version 0.2 - 2003-02-25
* Added INSTALL, README.admin, README.contrib.

version 0.1 - 2003-02-24

* Initial release.
* New s48 libraries: args-fold concurrency continuation-data-type
  krims module-system sequences
* New scsh libraries: afs bytio dir-streams image-info interaction
  pps