@@ -1,0 +1,1 @@
+Copyright (c) 2004 Anthony Carrico, Martin Gasbichler
