@@ -1,40 +1,15 @@
 Scheme Untergrund Library
 
 The Scheme Untergrund Library hosts contributed code for Scheme48 and
-Scsh. In addition to acting as host, the project provides a
-centralized way to access these packages from the languages' module
-system.
+Scsh.
 
 Sunterlib is hosted at Savannah:
   http://savannah.nongnu.org/projects/sunterlib/
 
-USE
+INSTALLATION AND USE
 
-To use sunterlib, first make sure the library is installed (see
-INSTALL).
-
-After installation, the library is available in
-  /usr/local/lib/sunterlib,
-and the documentation is available in
-  /usr/local/share/doc/sunterlib
-(or the corresponding subdirectories of the prefix used for
-installation).
-
-The file "sunterlib.scm" is the full sunterlib interface for use with
-scsh ("sunterlib.scm" is composed of the deprecated "interfaces.scm"
-and "packages.scm").
-
-The file "sunterlib-s48.scm" is the sunterlib subset interface for use
-with scheme48 ("sunterlib-s48.scm" is composed of the deprecated
-"s48-interfaces.scm" and "s48-packages.scm").
-
-A typical scsh script might start like this:
-
-#!/usr/local/bin/scsh \
--lm /usr/local/lib/sunterlib/sunterlib.scm -o foo -s
-!#
-
-where "foo" is a sunterlib package needed by your script.
+As of version 0.6, sunterlib follows Michel Schinz's scsh package
+proposal for installation and use. Please see INSTALL for details.
 
 BUGS
 
