@@ -1,8 +1,8 @@
 (define-package "scsh-packages"
   (0 0)
   ()
-  (install-file "load.scm" 'base)
-  (install-file "README" 'doc)
+  ; (install-file "load.scm" 'base)
+  ; (install-file "README" 'doc)
   (install-file "NEWS" 'doc)
   (install-string (COPYING) "COPYING" 'doc)
   (install-file "scheme/install-lib/configure.scm" 'scheme)
