@@ -1,9 +1,16 @@
 version 0.6
+* COPYING is now autogenerated.
+* Libraries now have their own version numbers.
+* Libraries now have their own NEWS.
+* AUTHORS files now must contain copyrights.
+* New package system
+  * interfaces.scm + packages.scm -> load.scm
+  * add pkg-def.scm
+* New scsh library: scsh-packages
 * New s48 library: mini-profiler
 * New s48 library: reinitializer
 * New scsh libraries: file-mode
 * New s48 libraries: SRFI-34/SRFI-35 exceptions and conditions, SRFI-10
-
 
 version 0.5 2003-11-19
 * New s48 libraries: procedure-tables.
